--- a/style.css
+++ b/style.css
@@ -18,11 +18,13 @@ box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
 backdrop-filter: blur( 3px );
 -webkit-backdrop-filter: blur( 3px );
 border: 1px solid rgba( 255, 255, 255, 0.18 );
+display: none;
 }
 .nav2 h2 {
     text-align: center;
     padding: 10px;
     font-size: 30px;
+    
 }
 nav{
     height: 50px;
@@ -102,6 +104,9 @@ button {
     }
     nav{
         display: none;
+    }
+    .nav2{
+        display: block;
     }
     
 }
